Implement deep assertions via Shazamcrest