@@ -177,6 +177,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.shazam</groupId>
+			<artifactId>shazamcrest</artifactId>
+			<version>0.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.github.javafaker</groupId>
 			<artifactId>javafaker</artifactId>
 			<version>1.0.2</version>
@@ -203,8 +209,8 @@
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=info.picocli
-                                                --add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=com.fasterxml.jackson.databind
-                                                --add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=com.fasterxml.jackson.databind
+						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=com.fasterxml.jackson.databind
+						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=com.fasterxml.jackson.databind
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog=info.picocli
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
@@ -212,19 +218,22 @@
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.p2p=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.handler=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.packet=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=info.picocli
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli=info.picocli
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.option=info.picocli
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.util=info.picocli
-
-                                        </argLine>
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
